--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,5 @@
 	token = b673b3c641290b2790ef4840f0f0b212
 [push]
 	default = simple
+[alias]
+	stashed = stash list --pretty=format:'%gd: %Cred%h%Creset %Cgreen[%ar]%Creset %s'
