rework elfeed and powerline setup. close to good colors.

--- a/.gitconfig
+++ b/.gitconfig
@@ -20,3 +20,7 @@
 [difftool "icdiff"]
     cmd = icdiff $LOCAL $REMOTE | less -R
 [grep]
+[core]
+	autocrlf = input
+[branch]
+	autosetuprebase = always
