undo some old java and win. some ensures on emacs package load

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Mitchell Perilstein
-	email = mitchell.perilstein@thingworx.com
+	email = mitchell.perilstein@gmail.com
 [github]
 [push]
 	default = simple
