Bashpocolypse and git dotfiles as home begins.

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
 [push]
 	default = simple
 [alias]
+        co = checkout
 	stashed = stash list --pretty=format:'%gd: %Cred%h%Creset %Cgreen[%ar]%Creset %s'
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
